Página de prueba actualizada

--- a/website/index.html
+++ b/website/index.html
@@ -1,1 +1,9 @@
-¡Hola mundo!
+<html xmlns="http://www.w3.org/1999/html">
+<head>
+    <title>Prueba Docker</title>
+    <meta charset="UTF-8">
+</head>
+<body>
+<h1>¡Hola mundo!</h1>
+</body>
+</html>
